fix: dark mode for footnote hover box

--- a/input.css
+++ b/input.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 .footnote-copy {
-  @apply fixed top-4 right-4 bg-slate-100 shadow-md p-4 max-w-lg rounded-md;
+  @apply fixed top-1 md:top-4 right-1 left-1 md:left-auto md:right-4 bg-slate-100 shadow-md p-4 max-w-lg rounded-md dark:bg-slate-700 dark:text-slate-50;
 }
