--- a/output.css
+++ b/output.css
@@ -1275,10 +1275,6 @@ video {
   min-width: 100%;
 }
 
-.max-w-full {
-  max-width: 100%;
-}
-
 .grow {
   flex-grow: 1;
 }
@@ -1426,8 +1422,9 @@ video {
 
 .footnote-copy {
   position: fixed;
-  top: 1rem;
-  right: 1rem;
+  top: 0.25rem;
+  right: 0.25rem;
+  left: 0.25rem;
   max-width: 32rem;
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
@@ -1436,6 +1433,23 @@ video {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+@media (prefers-color-scheme: dark) {
+  .footnote-copy {
+    --tw-bg-opacity: 1;
+    background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+    --tw-text-opacity: 1;
+    color: rgb(248 250 252 / var(--tw-text-opacity));
+  }
+}
+
+@media (min-width: 768px) {
+  .footnote-copy {
+    top: 1rem;
+    left: auto;
+    right: 1rem;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
